--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "start": "ts-node src/app.ts"
   },
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "@prisma/client": "^5.12.1",
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.6",
@@ -21,6 +22,7 @@
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/mailchimp__mailchimp_marketing": "^3.0.20",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.7",
     "@types/node-cron": "^3.0.11",
