--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
+    "i": "^0.3.7",
+    "i18n-iso-countries": "^7.11.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "node": "^18.20.2",
     "node-cron": "^3.0.3",
+    "npm": "^10.8.0",
     "uuid": "^9.0.1",
     "winston": "^3.13.0"
   },
