--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@prisma/client": "^5.12.1",
     "@types/express-validator": "^3.0.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/socket.io": "^3.0.2",
     "aws-sdk": "^2.1632.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -14,10 +15,13 @@
     "express-validator": "^7.0.1",
     "i": "^0.3.7",
     "i18n-iso-countries": "^7.11.2",
+    "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "node": "^18.20.2",
     "node-cron": "^3.0.3",
+    "npm": "^10.8.1",
+    "socket.io": "^4.7.5",
     "uuid": "^9.0.1",
     "winston": "^3.13.0"
   },
