--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
+    "firebase-admin": "^12.2.0",
     "i": "^0.3.7",
     "i18n-iso-countries": "^7.11.2",
     "install": "^0.13.0",
